--- a/VM/CMakeLists.txt
+++ b/VM/CMakeLists.txt
@@ -3,4 +3,9 @@ project(VM)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(VM main.cpp)
+add_executable(VM main.cpp
+        vm.cpp
+        vm.h
+        bytecode.h
+        ememory.cpp
+        ememory.h)
